Add 'Random Enemy' button to UI
Introduces a new button labeled 'Random Enemy' below the existing 'Random Build' button, allowing users to randomize the opponent's loadout. Also updates the previous button text from 'Randomize' to 'Random Build' for clarity.

--- a/index.html
+++ b/index.html
@@ -1483,7 +1483,8 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
             <div style="color:#aaa; font-size:11px; margin-bottom:6px;">Set Bonus</div>
             <div style="color:#555; font-size:10px;">(visual indicator placeholder)</div>
           </div>
-          <button id="randBuildBtn" type="button" title="Randomize Player loadout" style="margin-top:12px; width:100%; background:#000; color:#f33; border:1px solid #f33; border-radius:6px; padding:8px; cursor:pointer; font-size:12px; font-weight:700;">Randomize</button>
+          <button id="randBuildBtn" type="button" title="Randomize Player loadout" style="margin-top:12px; width:100%; background:#000; color:#f33; border:1px solid #f33; border-radius:6px; padding:8px; cursor:pointer; font-size:12px; font-weight:700;">Random Build</button>
+          <button id="randEnemyBtn" type="button" title="Randomize Opponent loadout" style="margin-top:8px; width:100%; background:#000; color:#f33; border:1px solid #f33; border-radius:6px; padding:8px; cursor:pointer; font-size:12px; font-weight:700;">Random Enemy</button>
           
         </div>
         
