--- a/index.html
+++ b/index.html
@@ -9,64 +9,76 @@ html,body { margin:0; height:100%; background:#000; color:#f33; font-family: Int
 html { font-size:13px; }
 header { padding:10px 16px; border-bottom:2px solid #f33; }
 .frame {
-  display: grid;
-  grid-template-columns: 300px minmax(0, 1fr) 300px;
-  gap: 6px;
-  height: calc(100vh - 52px);
-  padding: 6px;
-  overflow: hidden;
+  /* ...existing code... */
 }
-.panel {
-  background:#000;
-  border:2px solid #f33;
-  border-radius:10px;
-  padding:6px;
-  display:flex;
-  flex-direction:column;
-  min-height:0;
-  overflow:auto; /* allow column to scroll instead of page */
+  /* ...removed stray property... */
+/* ...existing code... */
+</style>
+
+<script>
+// Render compendium grid (restored visually rich card UI)
+function renderCompendiumGrid() {
+  const grid = document.getElementById('itemGrid');
+  grid.innerHTML = '';
+  const items = Object.values(window.HEIC_DETAILS || {});
+  items.forEach(item => {
+    const card = document.createElement('div');
+    card.className = 'card';
+    card.tabIndex = 0;
+    card.setAttribute('data-cat', (item.tags && item.tags[0]) || '');
+    // Icon
+    const iconWrap = document.createElement('div');
+    iconWrap.className = 'iconWrap';
+    const icon = document.createElement('img');
+    icon.src = `./${item.icon || 'placeholder.png'}`;
+    icon.alt = item.name;
+    iconWrap.appendChild(icon);
+    // Badge (if any)
+    if (item.tier) {
+      const badge = document.createElement('span');
+      badge.className = 'badge';
+      badge.textContent = item.tier;
+      iconWrap.appendChild(badge);
+    }
+    card.appendChild(iconWrap);
+    // Name
+    const name = document.createElement('div');
+    name.className = 'nameUnder';
+    name.textContent = item.name;
+    card.appendChild(name);
+    // Stat row (horizontal, visually rich)
+    const statRow = document.createElement('div');
+    statRow.className = 'statRow';
+    ['attack','armor','health','speed'].forEach(stat => {
+      if (item.stats && item.stats[stat]) {
+        const statDiv = document.createElement('div');
+        statDiv.className = 'stat';
+        const statIcon = document.createElement('img');
+        statIcon.src = `./${stat}.png`;
+        statIcon.alt = stat;
+        statDiv.appendChild(statIcon);
+        statDiv.appendChild(document.createTextNode(' '+item.stats[stat]));
+        statRow.appendChild(statDiv);
+      }
+    });
+    card.appendChild(statRow);
+    // Effect text (styled, multi-line, with triggers)
+    if (item.effects && item.effects.length) {
+      const effect = document.createElement('div');
+      effect.className = 'effect';
+      effect.innerHTML = item.effects.map(eff => {
+        let trigger = eff.trigger ? `<span class='trigger'>${eff.trigger}</span>: ` : '';
+        let actions = (eff.actions && eff.actions.length)
+          ? eff.actions.map(a => `<span class='action'>${a.type.replace(/_/g,' ')}</span>`).join(', ')
+          : '';
+        return `<div>${trigger}${actions}</div>`;
+      }).join('');
+      card.appendChild(effect);
+    }
+    grid.appendChild(card);
+  });
 }
-.title { font-size:12px; color:#f33; margin:4px 2px 6px; }
-.oils { display:flex; flex-direction:column; gap:6px; }
-.oil { display:flex; align-items:center; gap:8px; border:2px solid #f33; border-radius:8px; padding:6px; cursor:pointer; }
-.oil img { width:22px; height:22px; image-rendering:pixelated; }
-.oil.active { background:#300; }
-.weapon-slot { border:2px dashed #f33; border-radius:10px; padding:8px; text-align:center; margin:8px 0; min-height:48px; display:flex; align-items:center; justify-content:center; }
-.grid12 {
-  display:grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: 60px;
-  gap:6px;
-  flex:1;
-}
-.slot { border:2px dashed #f33; border-radius:10px; display:flex; align-items:center; justify-content:center; color:#f33; }
-.slot.filled { border-style:solid; }
-.slot img { width:40px; height:40px; image-rendering:pixelated; }
-.weapon-slot img { width:48px; height:48px; image-rendering:pixelated; }
-.edge-tile { border:2px solid #f33; border-radius:10px; padding:6px; display:flex; flex-direction:column; gap:6px; margin-bottom:8px; }
-.edge-body { display:flex; align-items:center; gap:8px; }
-.edge-body img { width:20px; height:20px; image-rendering:pixelated; }
-.edge-tile select { flex:1; background:#000; color:#f33; border:1px solid #f33; border-radius:6px; padding:4px 6px; }
-.stats { display:flex; flex-direction: column; align-items:flex-start; gap:6px; padding-top:8px; border-top:2px solid #f33; }
-.stat {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  background: #2f5d1a;
-  border: 2px solid #95d5b2;
-  border-radius: 999px;
-  padding: 8px 18px;
-  font-size: 20px;
-  color: #fff;
-  font-weight: bold;
-  box-shadow: 0 2px 8px rgba(149,213,178,0.25);
-  margin-bottom: 6px;
-}
-.stat img {
-  width: 28px;
-  height: 28px;
-  image-rendering: pixelated;
-}
+</script>
   .center {
     background: #111;
     border: 2px solid #f33;
