--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>He Is Coming   Loadout Builder (v5)</title>
+<script src="https://cdn.tailwindcss.com"></script>
 <style>
 html,body { margin:0; height:100%; background:#000; color:#f33; font-family: Inter, system-ui, Arial, sans-serif; }
 /* Slightly smaller font for a more compact UI */
@@ -1233,20 +1234,15 @@ function renderCompendiumGrid() {
   </section>
 
   <!-- CENTER COLUMN -->
-  <div style="grid-column: 2; display: flex; flex-direction: column; height: 100%; min-height:0;">
-    <div class="tabs" style="display:flex; gap:2px; margin-bottom:8px;">
-      <button id="tabCompendium" class="tabBtn" style="background:#111;color:#f33;border:2px solid #f33;border-radius:8px 8px 0 0;padding:8px 24px;cursor:pointer;font-size:16px;">Compendium</button>
-      <button id="tabAnalysis" class="tabBtn" style="background:#111;color:#fa0;border:2px solid #fa0;border-radius:8px 8px 0 0;padding:8px 24px;cursor:pointer;font-size:16px;">Analysis</button>
-      <button id="tabSimulation" class="tabBtn" style="background:#111;color:#0f3;border:2px solid #0f3;border-radius:8px 8px 0 0;padding:8px 24px;cursor:pointer;font-size:16px;">Simulation</button>
+  <div class="col-span-1 flex flex-col h-full min-h-0">
+    <div class="tabs flex gap-0.5 mb-2">
+      <button id="tabCompendium" class="tabBtn bg-gray-900 text-red-400 border-2 border-red-400 rounded-t-lg px-6 py-2 cursor-pointer text-lg">Compendium</button>
+      <button id="tabAnalysis" class="tabBtn bg-gray-900 text-yellow-400 border-2 border-yellow-400 rounded-t-lg px-6 py-2 cursor-pointer text-lg">Analysis</button>
+      <button id="tabSimulation" class="tabBtn bg-gray-900 text-green-400 border-2 border-green-400 rounded-t-lg px-6 py-2 cursor-pointer text-lg">Simulation</button>
     </div>
-    <section class="center" id="compendiumTab" style="flex:1; display:flex; flex-direction:column; min-height:0;">
+    <section class="center flex-1 flex flex-col min-h-0" id="compendiumTab">
       <!-- Advanced Compendium Header -->
-      <div class="compendium-header" style="
-        background: linear-gradient(135deg, #1a1f2e 0%, #16202d 100%); 
-        padding: 16px 20px; 
-        border-bottom: 2px solid #f33;
-        flex-shrink: 0; display:none;
-      ">
+      <div class="compendium-header bg-gradient-to-br from-slate-800 to-slate-900 p-4 border-b-2 border-red-400 flex-shrink-0 hidden">
         <!-- Top Row: Search + View Controls -->
         <div style="display: flex; gap: 12px; align-items: center; margin-bottom: 12px; flex-wrap: wrap;">
           
@@ -1725,23 +1721,23 @@ function renderCompendiumGrid() {
       </div>
       
     </section>
-    <section class="center" id="simulationTab" style="flex:1; display:none; flex-direction:column; min-height:0; background: #000;">
+    <section class="center flex-1 hidden flex-col min-h-0 bg-black" id="simulationTab">
       <!-- Three-Pane Layout: Fighter Cards | Event Log | Loadout Tray -->
-      <div class="sim-three-pane" style="display: grid; grid-template-columns: 0 1fr 380px; gap: 12px; height: 100%; min-height: 0; padding: 12px;">
+      <div class="sim-three-pane grid grid-cols-[0_1fr_380px] gap-3 h-full min-h-0 p-3">
         <!-- LEFT PANE: (hidden, reserved for future) -->
         <div class="fighter-summary-pane" style="display: none;"></div>
 
         <!-- MIDDLE PANE: Event Log, Arena, and Battle Controls -->
-        <div class="event-log-pane" style="display: flex; flex-direction: column; background: #0a0a0a; border: 2px solid #333; border-radius: 12px; overflow: hidden; min-height: 0; grid-column: 2; position: relative; z-index: 2;">
+        <div class="event-log-pane flex flex-col bg-gray-900 border-2 border-gray-700 rounded-xl overflow-hidden min-h-0 col-start-2 relative z-10">
           <!-- Log Header -->
-          <div style="background: linear-gradient(90deg, #333 0%, #555 100%); padding: 12px 16px; border-bottom: 2px solid #333; flex-shrink: 0;">
+          <div class="bg-gradient-to-r from-gray-700 to-gray-600 py-3 px-4 border-b-2 border-gray-700 flex-shrink-0">
             <div style="display: flex; align-items: center; justify-content: space-between;">
               <h3 style="color: #fff; font-size: 16px; font-weight: 700; margin: 0;">   EVENT LOG</h3>
               <div style="display: flex; align-items: center; gap: 12px;">
                 <div id="battleStatus" style="color: #ccc; font-size: 12px; font-weight: 600;">Ready</div>
-                <button id="btnSimulateTop" type="button" title="Run a battle" style="background:#0f3;color:#000;border:none;border-radius:6px;padding:8px 12px;cursor:pointer;font-size:12px;font-weight:700;">START BATTLE</button>
-                <button id="randBuildBtn" type="button" title="Randomize player loadout" style="background:#0af;color:#fff;border:none;border-radius:6px;padding:8px 12px;cursor:pointer;font-size:12px;font-weight:700;">🎲 Randomize Player</button>
-                <button id="randEnemyBtn" type="button" title="Randomize opponent loadout" style="background:#f33;color:#fff;border:none;border-radius:6px;padding:8px 12px;cursor:pointer;font-size:12px;font-weight:700;">🎲 Randomize Opponent</button>
+                <button id="btnSimulateTop" type="button" title="Run a battle" class="bg-green-400 text-black border-none rounded-md px-3 py-2 cursor-pointer text-xs font-bold">START BATTLE</button>
+                <button id="randBuildBtn" type="button" title="Randomize player loadout" class="bg-cyan-400 text-white border-none rounded-md px-3 py-2 cursor-pointer text-xs font-bold">🎲 Randomize Player</button>
+                <button id="randEnemyBtn" type="button" title="Randomize opponent loadout" class="bg-red-400 text-white border-none rounded-md px-3 py-2 cursor-pointer text-xs font-bold">🎲 Randomize Opponent</button>
               </div>
             </div>
           </div>
@@ -1774,7 +1770,7 @@ function renderCompendiumGrid() {
           </div>
 
           <!-- Battle Log Content -->
-          <div id="simLog" style="flex: 1; overflow-y: auto; padding: 16px; font-size: 14px; color: #ccc; line-height: 1.6; min-height: 0;" aria-live="polite">
+          <div id="simLog" class="flex-1 overflow-y-auto p-4 text-sm text-gray-300 leading-relaxed min-h-0" aria-live="polite">
             <div style="text-align: center; color: #666; font-style: italic; padding: 40px 20px;">
               <img src="assets/attack.png" style="width: 16px; height: 16px; vertical-align: middle; image-rendering: pixelated;"> Ready to witness epic battles!<br><br>
               Configure your loadouts and hit <strong style="color: #0f3;">"START BATTLE"</strong> to begin.
@@ -1803,9 +1799,9 @@ function renderCompendiumGrid() {
             #arenaPlayerStatuses, #arenaOpponentStatuses{display:none}
           </style>
 
-          <div id="arenaBoard" style="display: grid; grid-template-columns: 1fr 1fr; gap: 24px; padding: 16px; border-top: 2px solid rgba(255,255,255,0.1);">
+          <div id="arenaBoard" class="grid grid-cols-2 gap-6 p-4 border-t-2 border-white/10">
             <!-- Player Arena -->
-            <div id="simPlayerArena" style="background: rgba(0,255,51,0.05); border: 1px solid #0a5; border-radius: 12px; padding: 12px; position: relative; min-height: var(--arena-box-min-height);">
+            <div id="simPlayerArena" class="bg-green-400/5 border border-green-600 rounded-xl p-3 relative" style="min-height: var(--arena-box-min-height);">
               <div style="color:#ffd; font-weight:700; font-size:14px; margin-bottom:6px;">Current Status</div>
               <div id="arenaPlayerStatusBar" class="status-bar"></div>
               <div id="arenaPlayerStatuses" style="display:flex;gap:6px;flex-wrap:wrap;justify-content:center;margin:6px 0 8px 0;"></div>
@@ -1847,7 +1843,7 @@ function renderCompendiumGrid() {
               </div>
             </div>
             <!-- Opponent Arena -->
-            <div id="simOpponentArena" style="background: rgba(255,51,51,0.05); border: 1px solid #a33; border-radius: 12px; padding: 12px; position: relative; min-height: var(--arena-box-min-height);">
+            <div id="simOpponentArena" class="bg-red-400/5 border border-red-600 rounded-xl p-3 relative" style="min-height: var(--arena-box-min-height);">
               <div style="color:#ffd; font-weight:700; font-size:14px; margin-bottom:6px; text-align:right;">Current Status</div>
               <div id="arenaOpponentStatusBar" class="status-bar" style="justify-content:flex-end;"></div>
               <div id="arenaOpponentStatuses" style="display:flex;gap:6px;flex-wrap:wrap;justify-content:center;margin:6px 0 8px 0;"></div>
@@ -1892,20 +1888,20 @@ function renderCompendiumGrid() {
         </div>
 
         <!-- RIGHT PANE: Loadout Tray -->
-        <div class="loadout-tray-pane" style="display: flex; flex-direction: column; gap: 16px; background: #0a0a0a; border: 2px solid #333; border-radius: 12px; padding: 16px; overflow-y: auto; grid-column: 3; position: relative; z-index: 1; max-width: 380px;">
-          <h3 style="color: #fff; margin: 0 0 12px 0; font-size: 16px; text-align: center;">   LOADOUT TRAY</h3>
+        <div class="loadout-tray-pane flex flex-col gap-4 bg-gray-900 border-2 border-gray-700 rounded-xl p-4 overflow-y-auto col-start-3 relative z-[1] max-w-[380px]">
+          <h3 class="text-white m-0 mb-3 text-base text-center">   LOADOUT TRAY</h3>
           <!-- Player Loadout -->
           <div class="loadout-section">
-            <h4 style="color: #0f3; margin: 0 0 8px 0; font-size: 14px;">Player Items</h4>
-            <div id="playerLoadoutDisplay" style="display: grid; grid-template-columns: 1fr; gap: 8px; min-height: 40px;">
-              <div style="color: #666; font-size: 11px; font-style: italic; text-align: center; padding: 12px;">No items equipped</div>
+            <h4 class="text-green-400 m-0 mb-2 text-sm">Player Items</h4>
+            <div id="playerLoadoutDisplay" class="grid grid-cols-1 gap-2 min-h-10">
+              <div class="text-gray-500 text-xs italic text-center p-3">No items equipped</div>
             </div>
           </div>
           <!-- Opponent Loadout -->
           <div class="loadout-section">
-            <h4 style="color: #f33; margin: 0 0 8px 0; font-size: 14px;">Opponent Items</h4>
-            <div id="opponentLoadoutDisplay" style="display: grid; grid-template-columns: 1fr; gap: 8px; min-height: 40px;">
-              <div style="color: #666; font-size: 11px; font-style: italic; text-align: center; padding: 12px;">No items equipped</div>
+            <h4 class="text-red-400 m-0 mb-2 text-sm">Opponent Items</h4>
+            <div id="opponentLoadoutDisplay" class="grid grid-cols-1 gap-2 min-h-10">
+              <div class="text-gray-500 text-xs italic text-center p-3">No items equipped</div>
             </div>
           </div>
           <!-- Tag Groups (Future Implementation) -->
