--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ function renderCompendiumGrid() {
     card.className = 'iconWrap';
     const icon = document.createElement('img');
 </head>
-<body>
-<div class="frame">
+<body class="bg-black text-gray-200 min-h-screen">
+<div class="frame flex flex-row w-full min-h-screen">
   <!-- LEFT / PLAYER -->
-  <section class="panel" id="panelP">
+  <section class="panel flex flex-col bg-gray-900 border-r-2 border-gray-800 p-4 w-80 min-h-screen" id="panelP">
     <div class="title">Oils</div>
     <div class="oils" id="oilsP">
       <div class="oil" data-kind="attack"><img src="assets/attack.png"><span>Attack Oil</span></div>
@@ -62,13 +62,13 @@ function renderCompendiumGrid() {
   </section>
 
   <!-- CENTER COLUMN -->
-  <div class="col-span-1 flex flex-col h-full min-h-0">
+  <div class="col-span-1 flex flex-col h-full min-h-0 flex-1">
     <div class="tabs flex gap-0.5 mb-2">
       <button id="tabCompendium" class="tabBtn bg-gray-900 text-red-400 border-2 border-red-400 rounded-t-lg px-6 py-2 cursor-pointer text-lg">Compendium</button>
       <button id="tabAnalysis" class="tabBtn bg-gray-900 text-yellow-400 border-2 border-yellow-400 rounded-t-lg px-6 py-2 cursor-pointer text-lg">Analysis</button>
       <button id="tabSimulation" class="tabBtn bg-gray-900 text-green-400 border-2 border-green-400 rounded-t-lg px-6 py-2 cursor-pointer text-lg">Simulation</button>
     </div>
-    <section class="center flex-1 flex flex-col min-h-0" id="compendiumTab">
+  <section class="center flex-1 flex flex-col min-h-0 bg-gray-950 rounded-xl border-2 border-gray-800" id="compendiumTab">
       <!-- Advanced Compendium Header -->
       <div class="compendium-header bg-gradient-to-br from-slate-800 to-slate-900 p-4 border-b-2 border-red-400 flex-shrink-0 hidden">
         <!-- Top Row: Search + View Controls -->
@@ -736,7 +736,7 @@ function renderCompendiumGrid() {
   </div>
 
   <!-- RIGHT / OPPONENT -->
-  <section class="panel" id="panelO">
+  <section class="panel flex flex-col bg-gray-900 border-l-2 border-gray-800 p-4 w-80 min-h-screen" id="panelO">
     <div class="title">Oils</div>
     <div class="oils" id="oilsO">
       <div class="oil" data-kind="attack"><img src="assets/attack.png"><span>Attack Oil</span></div>
