Switch TailwindCSS from stylesheet to script CDN
Replaces the TailwindCSS CDN stylesheet link with the script CDN in index.html. This allows for dynamic configuration and usage of Tailwind via JavaScript.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>He Is Coming   Loadout Builder (v5)</title>
-<link rel="stylesheet" href="https://cdn.tailwindcss.com">
+<script src="https://cdn.tailwindcss.com"></script>
 
 
 <script>
